--- a/stl-viewer.cabal
+++ b/stl-viewer.cabal
@@ -13,9 +13,31 @@ category:            graphics
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable stl-viewer
-  main-is:             Main.hs
-  build-depends:       base >=4.13 && <4.14
-                     , sdl2
-  ghc-options:         -Wall -rtsopts -threaded
-  default-language:    Haskell2010
+common shared-properties
+  default-language: Haskell2010
+  build-depends:
+  ghc-options:
+   -Wall
+
+library
+  import: shared-properties
+  hs-source-dirs: src/
+  exposed-modules:
+    STL
+  build-depends: base >=4.13 && <4.14
+               , sdl2
+               , sdl2-gfx
+               , vector
+               , OpenGL
+               , bytestring
+
+executable stl-viewer-app
+  build-depends: base, stl-viewer
+               , sdl2
+               , sdl2-gfx
+  main-is:
+   Main.hs
+  hs-source-dirs:
+   app
+  ghc-options:
+   -Wall -rtsopts -threaded
